fix: increase font size for navbar brand in style.css for improved readability

--- a/css/style.css
+++ b/css/style.css
@@ -159,7 +159,7 @@ a:focus {
 .navbar-brand,
 .navbar-brand:hover {
   color: #000000;
-  font-size: 15px;
+  font-size: 25px;
   font-weight: 600;
   text-transform: uppercase;
 }
